# wiki-network-extractor

./: .gitignore  AGENTS.md  README.md  json2hdf.py  pyproject.toml  setup.py  xml2json.py
src/wiki_network_extractor/: __init__.py  __main__.py
tests/: test_core.py
wikinet/: __init__.py  __main__.py  json2hdf.py  xml2json.py
