[project]
name = "wiki-network-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Joseph Kleinhenz", email = "kleinhenz.joseph@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "numpy>=2.4.6",
    "tqdm>=4.67.3",
]

[project.scripts]
wikinet = "wiki_network_extractor.__main__:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "ty>=0.0.38",
]
